<resources>
    <string name="app_name">AndroidTopics</string>
    <string name="open_email">Open Email</string>
    <string name="open_youtube">Open Youtube</string>
    <string name="open_browser">Open Browser</string>
    <string name="explicit_intent">Explicit Intent</string>
    <string name="implicit_intent">Implicit Intent</string>
    <string name="intent_filter">Intent Filter</string>
    <string name="intent">Intent</string>
    <string name="broadcast">Broadcast</string>
    <string name="register_airplane_broadcast">Register Airplane</string>
    <string name="unregister_airplane_broadcast">Unregister Airplane</string>
    <string name="register_network">Register Network</string>
    <string name="register_boot_complete">Register Boot Complete</string>
    <string name="service">Service</string>
    <string name="write_text">Write Text</string>
    <string name="stop_foreground_service">Stop Foreground Service</string>
    <string name="start_foreground_service">Start Foreground Service</string>
    <string name="start_sound">Start Sound</string>
    <string name="stop_sound">Stop Sound</string>
    <string name="foreground_service">Foreground Service</string>
    <string name="background_service">Background Service</string>
    <string name="open_facebook">Open Facebook</string>
    <string name="airplane_mode_enabled">Airplane mode enabled</string>
    <string name="airplane_mode_disabled">Airplane mode Disabled</string>
    <string name="welcome">Welcome…</string>
    <string name="can_t_find_youtube_application">can\'t find youtube application!!</string>
</resources>