<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.service.ServiceActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/foreground_service" />

    <Button
        android:id="@+id/btnStartForeground"
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:backgroundTint="#81BB3F"
        android:layout_height="58dp"
        android:text="@string/start_foreground_service"/>

    <Button
        android:id="@+id/btnStopForeground"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:backgroundTint="#D12020"
        android:layout_marginTop="12dp"
        android:text="@string/stop_foreground_service"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="16dp"
        android:background="#3A3A3A"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/background_service" />


    <Button
        android:id="@+id/btn_text_background_service"
        android:layout_width="match_parent"
        android:backgroundTint="#81BB3F"
        android:layout_height="58dp"
        android:layout_marginTop="16dp"
        android:text="@string/write_text"/>

    <ProgressBar
        android:id="@+id/progress"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/txtText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textSize="16sp"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnStartBackgroundSound"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:backgroundTint="#81BB3F"
            android:layout_marginEnd="8dp"
            android:layout_height="58dp"
            android:layout_marginTop="16dp"
            android:text="@string/start_sound"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnStopBackgroundSound"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="58dp"
            android:backgroundTint="#D12020"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/stop_sound"
            tools:ignore="ButtonStyle" />

    </LinearLayout>


</LinearLayout>