<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    tools:context=".ui.broadcast.BroadcastActivity">

    <Button
        android:id="@+id/btnRegisterAirplane"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:textSize="18sp"
        android:layout_margin="12dp"
        android:backgroundTint='#5CA803'
        android:text="@string/register_airplane_broadcast"/>

    <Button
        android:id="@+id/btnUnregisterAirplane"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:textSize="18sp"
        android:backgroundTint='#F21E1E'
        android:layout_margin="12dp"
        android:text="@string/unregister_airplane_broadcast"/>

    <Button
        android:id="@+id/btnRegisterConnectivity"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:textSize="18sp"
        android:layout_margin="12dp"
        android:backgroundTint='#5CA803'
        android:text="@string/register_network"/>

    <Button
        android:id="@+id/btnRegisterBoot"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:textSize="18sp"
        android:layout_margin="12dp"
        android:backgroundTint='#5CA803'
        android:text="@string/register_boot_complete"/>

</LinearLayout>