<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:layout_margin="12dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnIntent"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:textSize="20sp"
        android:text="@string/intent"/>

    <Button
        android:id="@+id/btnBroadcast"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:textSize="20sp"
        android:layout_marginTop="8dp"
        android:text="@string/broadcast"/>

    <Button
        android:id="@+id/btnService"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:textSize="20sp"
        android:layout_marginTop="8dp"
        android:text="@string/service"/>

</LinearLayout>