<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_margin="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.intent.IntentActivity">

    <Button
        android:id="@+id/btnExplicitIntent"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:textSize="20sp"
        android:text="@string/explicit_intent"/>

    <Button
        android:id="@+id/btnImplicitIntent"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:textSize="20sp"
        android:layout_marginTop="32dp"
        android:text="@string/implicit_intent"/>

    <Button
        android:id="@+id/btnIntentFilter"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:textSize="20sp"
        android:layout_marginTop="32dp"
        android:text="@string/intent_filter"/>

</LinearLayout>